--- a/index.html
+++ b/index.html
@@ -29,16 +29,9 @@
 
 <body>
 
-	<div class="container"><br>
+	<div class="container">
 		<div class="row">
-			<div class="col-lg-8">
-				<img class="image" src="images/preview.png" alt="Image Example">
-			</div>
-			<div class="col text">
-				<span class="accent">Simple Starter</span>. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-				Molestiae quos ab, incidunt hic recusandae animi nesciunt fugiat ipsa velit nobis, quam corrupti veritatis,
-				perferendis facere et odit autem corporis molestias?
-			</div>
+
 		</div>
 	</div>
 
