--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>New Project</title>
+	<title>Бурычин Дмитрий</title>
 	<meta name="description" content="Simple Starter Description">
 
 	<meta name="viewport"
